--- a/package.json
+++ b/package.json
@@ -1,14 +1,42 @@
 {
-  "name": "xensak-gui",
-  "version": "0.1.0",
-  "description": "Work in progress replacement for Ryusak/Emusak",
-  "main": "main.js",
+  "name": "xensak",
+  "productName": "xensak",
+  "version": "1.0.0",
+  "description": "My Electron application description",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
   },
-  "author": "xenova",
-  "license": "ISC",
+  "devDependencies": {
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron-forge/plugin-vite": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "electron": "31.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "ts-node": "^10.9.2",
+    "typescript": "~4.5.4",
+    "vite": "^5.3.5"
+  },
+  "keywords": [],
+  "author": {
+    "name": "Novα",
+    "email": "59028040+xen0va@users.noreply.github.com"
+  },
+  "license": "MIT",
   "dependencies": {
-    "electron": "^31.3.1"
+    "electron-squirrel-startup": "^1.0.1"
   }
 }
