--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "license": "MIT",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
+    "fs-extra": "^11.2.0",
+    "node-fetch": "^3.3.2",
     "vue": "^3.4.35",
     "vue-router": "^4.4.2"
   }
