--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@types/adm-zip": "^0.5.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^5.1.2",
+    "adm-zip": "^0.5.15",
     "electron": "31.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
